fix horizontal scroll

--- a/src/index.css
+++ b/src/index.css
@@ -46,6 +46,8 @@ body {
   background-color: #181818;
   color: #ffffff;
 
+  overflow-x: hidden;
+
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
